# SPider

./: .moves.c.swp  CMakeLists.txt  distance.py  encodings.pickle  face.py  image_capture.py  launch.sh  led.py  main.c  main.cpp  main.py  moves.c  moves.py  pir.py  pyproject.toml  requirements.txt  run.sh
